# parlamentaria

./: .env.example  .gitignore  AGENTS-MONETIZACAO.md  AGENTS.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  LLM-DEPLOY.md  README.md  docker-compose.homelab-gemini.yml.example  docker-compose.llama.yml  docker-compose.local.yml  docker-compose.premium.yml  docker-compose.yaml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_add_pgvector_rag.py  0003_add_eleitor_eligibility_and_voto_tipo.py  (+11 more)
backend/app/: config.py  dependencies.py  exceptions.py  extensions.py  logging.py  main.py  middleware.py  plan_gate.py
backend/scripts/: create_admin.py
backend/tests/: conftest.py  test_agents.py  test_analise_service.py  test_camara_client.py  test_camara_types.py  test_celery_tasks.py  test_channels.py  test_comparativo_fase7.py  test_comparativo_service.py  test_config.py  test_digest_engagement.py  test_domain_models.py  test_eleitor_service.py  test_eligibility.py  test_exceptions.py  test_fase5_polimento.py  test_fase8_polimento.py  test_listar_temas.py  test_llm_analysis.py  test_new_routers.py  test_notification_pipeline.py  test_notification_service.py  test_parlamentar_comparativos.py  test_parlamentar_dashboard.py  test_parlamentar_votos.py  test_proposicao_service.py  test_publicacao_integration.py  test_publicacao_service.py  test_rag.py  test_raio_x_tools.py  test_repositories.py  test_routers.py  test_schemas.py  test_social_admin_parlamentar.py  test_social_media.py  test_sync_entities.py  test_sync_service.py  test_sync_temas.py  test_telegram_enhancer.py  test_telegram_formatter.py  (+5 more)
(+231 files in other folders)
